# syre

./: .gitignore  .gitmodules  CITATION.cff  Cargo.toml  DEV.md  rust-toolchain.toml
cli/: Cargo.toml  README.md
cli/src/: common.rs  error.rs  lib.rs  main.rs  result.rs  result_test.rs  types.rs
cli/src/commands/: check.rs  mod.rs  run.rs
core/: Cargo.toml  README.md
core/src/: common.rs  common_test.rs  constants.rs  dev_utils.rs  error.rs  error_test.rs  identifier.rs  identifier_test.rs  lib.rs
core/src/_project_impl/: asset_test.rs  container.rs  project.rs  project_test.rs  script.rs  script_association.rs  script_association_test.rs  script_test.rs  standard_properties.rs
core/src/api/: database.rs  mod.rs
core/src/db/: collection.rs  collection_test.rs  database.rs  dev_utils.rs  error.rs  mod.rs  resource.rs  search_filter.rs  search_filter_test.rs
core/src/graph/: edge.rs  graph.rs  mod.rs  node.rs  tree.rs  tree_test.rs
core/src/lib_impl/: mod.rs  surreal_db.rs
core/src/project/: analysis_association.rs  analysis_association_test.rs  asset.rs  asset_properties.rs  asset_test.rs  container.rs  container_properties.rs  container_test.rs  excel_template.rs  metadata.rs  mod.rs  project.rs  project_test.rs  resources.rs  script.rs  script_association.rs  script_test.rs  standard_properties.rs  standard_properties_test.rs  standard_resource.rs
core/src/runner/: common.rs  common_test.rs  env.rs  env_test.rs  mod.rs  runner.rs  runner_test.rs
core/src/system/: mod.rs  template.rs  user.rs  user_test.rs
core/src/types/: creator.rs  data.rs  local_id.rs  mod.rs  resource_id.rs  resource_id_test.rs  resource_map.rs  resource_map_test.rs  resource_path.rs  resource_path_test.rs  user_id.rs  user_id_test.rs  user_permissions.rs  user_permissions_test.rs
desktop/: .actrc  .gitignore  .taurignore  BUILD.md  Cargo.toml  README.md  Trunk.toml  build.sh  index.html  package-lock.json  package.json  postcss.config.js  rust-analyzer.toml  tailwind.config.js
desktop/.cargo/: config.toml
desktop/public/: splashscreen.html
desktop/public/scripts/: dragdrop.webview2.polyfill.js
desktop/src/: actions.rs  app.rs  common.rs  constants.rs  error.rs  invoke.rs  lib.rs  main.rs  types.rs
desktop/src-lib/: Cargo.toml
desktop/src-lib/src/: command.rs  error.rs  event.rs  excel_template.rs  lib.rs  settings.rs  types.rs  utils.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/.cargo/: config.toml
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: common.rs  error.rs  identifier.rs  lib.rs  main.rs  settings.rs  setup.rs  state.rs
desktop/src/app/: app.rs  app_state.rs  auth_state.rs  mod.rs  page_overlay.rs  projects_state.rs  shadow_box.rs
desktop/src/commands/: analysis.rs  asset.rs  authenticate.rs  common.rs  container.rs  fs.rs  graph.rs  mod.rs  project.rs  script.rs  search.rs  settings.rs  types.rs  user.rs
desktop/src/common/: mod.rs
desktop/src/components/: autofocus.rs  detail_popout.rs  drawer.rs  form.rs  logo.rs  message.rs  messages.rs  mod.rs  modal.rs  toggle_expand.rs  truncate_left.rs
desktop/src/events/: mod.rs  project.rs
desktop/src/hooks/: asset.rs  container_path.rs  mod.rs  user.rs
desktop/src/navigation/: main.rs  mod.rs
desktop/src/pages/: dashboard.rs  home.rs  index.rs  landing.rs  mod.rs  not_found.rs  settings.rs
desktop/src/routes/: auth_guard.rs  mod.rs  routes.rs
desktop/src/widgets/: global.rs  mod.rs
desktop/styles/: alerts.scss  animations.scss  canvas.scss  container_tree.scss  dashboard.scss  form.scss  main.css  main.scss  messages.scss  navigation.scss  output.css  project_canvas.scss  sidebar.scss  style.scss  theme.js  themes.scss  thot_ui.scss  ui.scss  utilities.scss  variables.scss  widgets.scss
dev_utils/: Cargo.toml
dev_utils/src/: lib.rs  lock.rs
dev_utils/src/fs/: mod.rs  temp_dir.rs  temp_dir_test.rs  temp_file.rs
dev_utils/src/path/: mod.rs  resource_path.rs
dev_utils/src/project/: fireworks.rs  options.rs
has_id/: Cargo.toml
has_id/has_id_derive/: Cargo.toml
has_id/has_id_derive/src/: common.rs  derive.rs  derive_mut.rs  derive_serde.rs  lib.rs
has_id/src/: has_id.rs  has_id_mut.rs  has_id_serde.rs  lib.rs  lib_test.rs
lang/: Cargo.toml
lang/python/: BUILD.md  Cargo.toml  README.md  README.rst  pyproject.toml
lang/python/.venv-3.9/: pyvenv.cfg
lang/python/src/: functions.rs  lib.rs  types.rs
lang/r/: .RData  .Rbuildignore  .Rhistory  BUILD.md  BinaryFiles  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd
lang/r/R/: api.R  commands.R  common.R  extendr-wrappers.R  functions.R  resources.R  thot-package.R  zzz.R
lang/r/man/: Asset.Rd  Container.Rd  StandardProperties.Rd  active_user.Rd  add_asset.Rd  asset_from_json.Rd  children.Rd  container_by_path.Rd  container_from_json.Rd  container_path.Rd  create_database.Rd  (+25 more)
lang/rust/: Cargo.toml  README.md
lang/src/: database.rs  error.rs
lang/thot.Rcheck/: 00install.out  thot-Ex.R  thot-Ex.Rout
local/: Cargo.toml  README.md
local/database/: Cargo.toml  README.md  build.bat  build.ps1  build.sh  build_aarch64.sh  build_from_m1_to_intel.sh  build_x86_64.sh  close_ports.ps1
local/file_watcher/: Cargo.toml
local/fs_watcher/: Cargo.toml
local/runner/: Cargo.toml
local/simulator/: Cargo.toml
local/src/: common.rs  common_test.rs  constants.rs  error.rs  error_test.rs  file_resource.rs  identifier.rs  lib.rs
local/tests/: project-container.rs
settings_manager/: Cargo.toml  README.md
settings_manager/settings_manager_change_path/: Cargo.toml
settings_manager/settings_manager_derive/: Cargo.toml  README.md
settings_manager/settings_manager_derive_locked/: Cargo.toml  README.md
settings_manager/src/: error.rs  lib.rs  local_settings.rs  local_settings_test.rs  settings.rs  settings_test.rs  system_settings.rs  system_settings_test.rs  types.rs  types_test.rs  user_settings.rs  user_settings_test.rs
ui/: Cargo.toml  README.md
ui/src/: common.rs  constants.rs  error.rs  lib.rs
ui/tests/: README.md  components_form.rs
(+907 files in other folders)
