[workspace]
resolver = "2"
members = [
    "cli",
    "core",
    "desktop",
    "desktop/src-tauri",
    "desktop/src-lib",
    "file_path_from_id",
    "has_id",
    "has_id/has_id_derive",
    "lang/rust",
    "local",
    "local/database",
    "local/database/cli",
	"local/fs_watcher",
	"local/fs_watcher/test_utils",
	"local/simulator",
    "local/runner",
]

[workspace.dependencies]
syre-core = { path = "core" }
syre-local = { path = "local" }
syre-local-database = { path = "local/database" }
syre-fs-watcher = { path = "local/fs_watcher" }
dev_utils = { path = "dev_utils" }
has_id = { path  = "has_id" }
file_path_from_id = { path = "file_path_from_id" }

aquamarine = "0.5"
calamine = "0.25"
chrono = "0.4"
clap = "4.4"
crossbeam = "0.8"
csv = "1.3"
derive_more = "0.99"
directories = "5.0"
futures = "0.3"
indexmap = "2.2"
js-sys = "0.3"
notify = "6.1.1"
notify-debouncer-full = "0.3"
rayon = "1.8"
regex = "1.10"
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
serde_with = "3.7"
surrealdb = { version = "2.0", package = "surrealdb-nightly" }
# tauri-sys = { path = "/home/brian/Downloads/tauri-sys-dev/tauri-sys" }
tauri-sys = { git = "https://github.com/bicarlsen/tauri-sys", branch = "v2" }
# tauri-sys = { git = "https://github.com/bicarlsen/tauri-sys", branch = "fix/wasm_bindgen_serde" }
# tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys" }
thiserror = "1.0"
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
trash = "5.0"
uuid = { version = "1.3", features = ["v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
zmq = "0.10.0"

# dev dependencies
fake = "2.4"
rand = "0.8"
tempfile = "3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
