[workspace]
resolver = "2"
members = [
    "cli",
    "core",
    "desktop",
    "desktop/src-tauri",
    "desktop/src-lib",
    "file_path_from_id",
    "has_id",
    "has_id/has_id_derive",
    "in_trash",
    "lang/rust",
    "local",
    "local/database",
    "local/database/cli",
	"local/fs_watcher",
	"local/fs_watcher/test_utils",
	"local/simulator",
    "local/runner",
]

default-members = [
    "core"
]

[workspace.dependencies]
syre-core = { path = "core" }
syre-local = { path = "local" }
syre-local-database = { path = "local/database" }
syre-fs-watcher = { path = "local/fs_watcher" }
syre-local-runner = { path = "local/runner" }
dev_utils = { path = "dev_utils" }
file_path_from_id = { path = "file_path_from_id" }
in_trash = { path = "in_trash" }
has_id = { path  = "has_id" }

aquamarine = "0.5"
calamine = "0.25"
chrono = "0.4"
clap = "4.5"
crossbeam = "0.8"
csv = "1.3"
derive_more = "1.0"
directories = "5.0"
futures = "0.3"
glob = "0.3" 
ignore = "0.4"
indexmap = "2.5"
js-sys = "0.3"
notify = { version = "6.1", default-features = false }
notify-debouncer-full = { version = "0.3", default-features = false }
rayon = "1.8"
regex = "1.11"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.11"
serde-wasm-bindgen = "0.6"
surrealdb = { version = "2.0", package = "surrealdb-nightly" }
thiserror = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
trash = "5.1"
uuid = { version = "1.3", features = ["v4"] }
walkdir = "2.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
zmq = "0.10.0"

# dev dependencies
fake = "2.10"
rand = "0.8"
tempfile = "3.13"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
