[package]
name = "thot-cli"
version = "0.10.1"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Command line interface (CLI) for Thot data management and analysis software."
license = "MIT OR Apache-2.0"

homepage = "https://thot-data.com"
repository = "https://github.com/thot-data/cli"
keywords = [ "thot", "thot-data", "data", "data-analysis", "data-management" ]
categories = [ "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
env_logger = "0.9"
clap = { version = "3.2", features = ["derive"] }
thiserror = "1.0.50"

thot-core = { path = "../core", features=["clap"] }
thot-local = { path = "../local" }

[dev-dependencies]
rand = "0.8"
fake = "2.4"
mockall = "0.11"
