[package]
name = "syre-cli"
version = "0.10.1"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Command line interface (CLI) for Syre data management and analysis software."
license = "MIT OR Apache-2.0"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
env_logger = "0.10"
clap = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

syre-core = { path = "../core", features=["clap"] }
syre-local = { path = "../local" }

[dev-dependencies]
rand = "0.8"
fake = "2.4"
mockall = "0.11"
