[package]
name = "thot-core"
version = "0.10.0-intermediate"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Core functionality and types for Thot data management and analysis software."
license = "MIT OR Apache-2.0"

homepage = "https://thot.so"
repository = "https://github.com/thot-data/thot"
keywords = [ "thot", "thot-data", "data", "data-analysis", "data-management" ]
categories = [ "science", "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquamarine = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.1", optional = true }
cluFlock = "1.2"
derivative = "2.2"
directories = "4.0"
extendr-api = { version = "*", optional = true }
indexmap = { version = "1.9.2", features = ["serde"] }
pyo3 = { version = "0.17", features = ["extension-module", "macros", "serde"], optional = true }
pythonize = { version = "0.17", optional = true}
regex = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0" }
thiserror = "1.0.44"
tracing = "0.1.37"
uuid = { version = "1.2", features = ["serde", "v4"] }
validator = "0.14"
yew = { version = "0.21", optional = true }

has_id = { path = "../has_id", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
fake = "2.4"
mockall = { version = "0.11", features = ["nightly"] }
mockall_double = "0.3"
ntest = "0.7"
dev_utils = { path = "../dev_utils" }
lazy_static = "1.4"

[features]
default = ["project", "runner", "system", "db"]
db = ["project"]
project = []
runner = ["project"]
system = []

serde = ["dep:serde", "serde/rc", "has_id/serde"]
clap = ["dep:clap"]
extendr = ["dep:extendr-api"]
js = ["uuid/js"]
pyo3 = ["dep:pyo3", "dep:pythonize"]
yew = ["dep:yew", "chrono/wasmbind", "chrono/clock"]
