[package]
name = "thot-core"
version = "0.10.1"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Core functionality and types for Thot data management and analysis software."
license = "MIT OR Apache-2.0"

homepage = "https://thot.so"
repository = "https://github.com/thot-data/thot"
keywords = [ "thot", "thot-data", "data", "data-analysis", "data-management" ]
categories = [ "science", "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquamarine = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
clap = { workspace = true, optional = true }
derivative = "2.2"
directories = "5.0"
indexmap = { workspace = true, features = ["serde"] }
regex = "1"
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
validator = "0.16"
yew = { workspace = true, optional = true }

has_id = { path = "../has_id", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
fake = "2.4"
mockall = { version = "0.11", features = ["nightly"] }
mockall_double = "0.3"
ntest = "0.9"
dev_utils = { path = "../dev_utils" }
lazy_static = "1.4"

[features]
default = ["project", "runner", "system", "db"]
db = ["project"]
project = []
runner = ["project"]
system = []

serde = ["dep:serde", "serde/rc", "has_id/serde"]
clap = ["dep:clap"]
js = ["uuid/js"]
yew = ["dep:yew", "chrono/wasmbind", "chrono/clock"]
