[package]
name = "syre-desktop"
version = "0.10.1"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Syre desktop application."

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "gui", "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aquamarine = { workspace = true } # TODO: Only needed for documentation.
futures = "0.3"
gloo-storage = "0.3"
gloo-timers = "0.3"
indexmap = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true } # TODO: Only required for https://github.com/tauri-apps/tauri/issues/6078.
serde-wasm-bindgen = { workspace = true }
tauri-sys = { workspace = true, features = ["dialog", "event", "path"] }
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["time"] }
tracing-web = "0.1.2"
uuid = { workspace = true, features = ["js", "serde", "v4"] }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true }
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }

syre-core = { path = "../core", features = ["yew", "serde"] }
syre-local = { path = "../local", default-features = false }
syre-ui = { path = "../ui" }
syre-desktop-lib = { path = "src-lib" }
syre-local-database = { path = "../local/database" }

[dependencies.web-sys]
workspace = true
features = [
    "Document",
    "DomRect",
    "DomStringMap",
    "DragEvent",
    "Element",
    "Event",
    "FocusEvent",
    "FormData",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "InputEvent",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "SubmitEvent",
    "SvgCircleElement",
    "SvggElement",
    "SvgForeignObjectElement",
    "SvgPolylineElement",
    "SvgsvgElement",
    "SvgUseElement",
    "Window",
]

[dependencies.yew_icons]
workspace = true
features = [
    "BootstrapExclamationTriangle",
    "BootstrapFiles",
    "FontAwesomeRegularEye",
    "FontAwesomeRegularEyeSlash",
    "FontAwesomeRegularFolder",
    "FontAwesomeSolidCaretDown",
    "FontAwesomeSolidCaretRight",
    "OcticonsSync24",
]
