[package]
name = "syre-desktop"
version = "0.10.2"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Syre desktop application."

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "gui", "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aquamarine = { workspace = true } # TODO: Only needed for documentation.
futures = "0.3"
gloo-storage = "0.3"
gloo-timers = "0.3"
indexmap = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true } # TODO: Only required for https://github.com/tauri-apps/tauri/issues/5993.
serde-wasm-bindgen = { workspace = true }
tauri-sys = { workspace = true, features = ["dialog", "event", "path"] }
time = { version = "0.3", features = ["wasm-bindgen"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time"] }
tracing-web = "0.1.2"
uuid = { workspace = true, features = ["js", "serde", "v4"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
yew = { workspace = true, features = ["csr"] }
yew-router = { workspace = true }

syre-core = { workspace = true, features = ["yew", "serde"] }
syre-local = { workspace = true }
syre-ui = { workspace = true }
syre-desktop-lib = { path = "src-lib" }
syre-local-database = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
    "Document",
    "DomRect",
    "DomStringMap",
    "DragEvent",
    "Element",
    "Event",
	"EventTarget",
    "FocusEvent",
    "FormData",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
	"HtmlTextAreaElement",
    "InputEvent",
	"ResizeObserver",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "SubmitEvent",
    "SvgCircleElement",
    "SvggElement",
    "SvgForeignObjectElement",
    "SvgPolylineElement",
    "SvgsvgElement",
    "SvgUseElement",
    "Window",
]

[dependencies.yew_icons]
workspace = true
features = [
    "BootstrapExclamationTriangle",
    "BootstrapFiles",
	"BootstrapSearch",
    "FontAwesomeRegularEye",
    "FontAwesomeRegularEyeSlash",
	"FontAwesomeRegularFileExcel",
    "FontAwesomeRegularFolder",
    "FontAwesomeSolidCaretDown",
    "FontAwesomeSolidCaretRight",
	"FontAwesomeSolidCircle",
	"FontAwesomeRegularCircle",
	"FontAwesomeSolidCode",
    "FontAwesomeSolidXmark",
    "OcticonsSync24",
]
