[package]
name = "syre-desktop-ui"
version = "0.11.0"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Syre desktop application."

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "gui", "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["time"] }
tracing-web = "0.1.3"
syre-core = { workspace = true, features = ["serde"] }
syre-local = { workspace = true }
syre-local-database.workspace = true
syre-desktop-lib = { path = "src-lib" }
futures.workspace = true
time = { version = "0.3", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.69", features = ["HtmlDialogElement"] }
getrandom = { version = "0.2", features = ["js"] }
# tauri-sys = { workspace = true, branch = "v2", features = ["event"] }
tauri-sys = { workspace = true, features = ["core", "event"] }
leptos = { version = "0.6", features = ["nightly", "csr"] }
leptos_router = { version = "0.6", features = ["nightly", "csr"] }
leptos_meta = { version = "0.6", features = ["nightly", "csr"] }
chrono = { workspace = true, features = ["serde"] }
leptos_icons = "0.3.1"
icondata = "0.3.1"
