[package]
name = "thot-lang"
version = "0.10.0"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Base language bindings for Thot."
license = "MIT OR Apache-2.0"

homepage = "https://thot.so"
repository = "https://github.com/thot-data/thot"
keywords = [ "thot", "thot-data", "language-bindings", "data-analysis", "data-management" ]
categories = [ "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"

thot-core = { path = "../core" }
thot-local = { path = "../local" }
thot-local-database = { path = "../local/database", features = ["client"] }
