[package]
name = "syre-local"
version = "0.10.1"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Local functionality for Syre data management and analysis software."
license = "MIT OR Apache-2.0"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "science", "data-structures" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aquamarine = { workspace = true }  # TODO Only needed for documentation.
derivative = "2.2"
directories = { workspace = true, optional = true }
glob = { version = "0.3.1", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
validator = "0.16"

has_id = { path  = "../has_id", features = ["derive", "serde"] }
syre-core = { path = "../core", features = ["serde"] }

[dev-dependencies]
rand = "0.8"
fake = "2.4"
lazy_static = "1.4.0"

dev_utils = { path = "../dev_utils", features = ["syre_core"] }

[features]
default = ["fs"]
fs = ["dep:directories", "dep:glob"]
