[package]
name = "settings_manager"
version = "0.0.2"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Settings manager."
license = "MIT OR Apache-2.0"

repository = "https://github.com/thot-data/settings_manager"
keywords = [ "settings" ]
categories = [ "config" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2"
tempfile = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"
cluFlock = "1.2"

[dev-dependencies]
rand = "0.8"
fake = "2.4"

dev_utils = { path = "../dev_utils" }
