[package]
name = "thot-ui"
version = "0.10.0"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Thot UI elements."

homepage = "https://thot.so"
repository = "https://github.com/thot-data/thot"
keywords = [ "thot", "thot-data", "data", "data-analysis", "data-management" ]
categories = [ "gui", "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9"
js-sys = "0.3"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["dialog", "event"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.20"
yew-router = "0.17"

thot-core = { path = "../core", features = ["js", "yew"] }

[dependencies.web-sys]
version = "0.3"
features=[
    "DataTransfer",
	"DomStringMap",
    "DragEvent",
    "Element",
	"Event",
	"EventTarget",
	"HtmlButtonElement",
    "HtmlCollection",
    "HtmlDivElement",
	"HtmlSelectElement",
	"HtmlTextAreaElement",
	"MediaQueryList",
	"MediaQueryListEvent",
	"Window",
]

[dependencies.yew_icons]
version = "0.7"
features=[
    "FontAwesomeSolidCode",
]

[dev-dependencies]
fake = "2.4"
wasm-bindgen-test = "0.3"
