[package]
name = "thot-ui"
version = "0.10.1"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Thot UI elements."

homepage = "https://thot.so"
repository = "https://github.com/thot-data/thot"
keywords = [ "thot", "thot-data", "data", "data-analysis", "data-management" ]
categories = [ "gui", "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { workspace = true }
js-sys = { workspace = true }
serde_json = { workspace = true }
tauri-sys = { workspace = true, features = ["dialog", "event"] }
tracing = { workspace = true }
uuid = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }

thot-core = { path = "../core", features = ["js", "yew"] }

[dependencies.web-sys]
workspace = true
features=[
    "DataTransfer",
	"DomStringMap",
    "DragEvent",
    "Element",
	"Event",
	"EventTarget",
	"HtmlButtonElement",
    "HtmlCollection",
    "HtmlDivElement",
	"HtmlSelectElement",
	"HtmlTextAreaElement",
    "InputEvent",
	"MediaQueryList",
	"MediaQueryListEvent",
	"Window",
]

[dependencies.yew_icons]
workspace = true
features=[
    "FontAwesomeRegularFile",
    "FontAwesomeRegularFileAudio",
    "FontAwesomeRegularFileCode",
    "FontAwesomeRegularFileExcel",
    "FontAwesomeRegularFileImage",
    "FontAwesomeRegularFileLines",
    "FontAwesomeRegularFilePdf",
    "FontAwesomeRegularFilePowerpoint",
    "FontAwesomeRegularFileVideo",
    "FontAwesomeRegularFileWord",
    "FontAwesomeRegularFileZipper",
    "FontAwesomeSolidAngleDown",
    "FontAwesomeSolidAngleUp",
    "FontAwesomeSolidCode",
    "FontAwesomeSolidXmark",
    "HeroiconsSolidMinus",
    "HeroiconsSolidPlus",
    "OcticonsFileBinary24",
]

[dev-dependencies]
fake = "2.4"
wasm-bindgen-test = "0.3"
