[package]
name = "syre-ui"
version = "0.10.1"
edition = "2021"

authors = [ "Brian Carlsen <carlsen.bri@gmail.com>" ]
description = "Syre UI elements."
license = "MIT OR Apache-2.0"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = [ "syre", "syre-data", "data", "data-analysis", "data-management" ]
categories = [ "gui", "science" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syre-core = { workspace = true, features = ["js", "yew"] }

indexmap = { workspace = true }
js-sys = { workspace = true }
serde_json = { workspace = true }
tauri-sys = { workspace = true, features = ["dialog", "event"] }
uuid = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }

[dependencies.web-sys]
workspace = true
features=[
    "CssStyleDeclaration",
    "DataTransfer",
	"DomStringMap",
	"DomRect",
    "DragEvent",
    "Element",
	"Event",
	"EventTarget",
	"HtmlButtonElement",
    "HtmlCollection",
    "HtmlDivElement",
	"HtmlSelectElement",
	"HtmlTextAreaElement",
    "InputEvent",
	"MediaQueryList",
	"MediaQueryListEvent",
	"Window",
]

[dependencies.yew_icons]
workspace = true
features=[
	"BootstrapExclamationTriangle",
    "FontAwesomeRegularFile",
    "FontAwesomeRegularFileAudio",
    "FontAwesomeRegularFileCode",
    "FontAwesomeRegularFileExcel",
    "FontAwesomeRegularFileImage",
    "FontAwesomeRegularFileLines",
    "FontAwesomeRegularFilePdf",
    "FontAwesomeRegularFilePowerpoint",
    "FontAwesomeRegularFileVideo",
    "FontAwesomeRegularFileWord",
    "FontAwesomeRegularFileZipper",
    "FontAwesomeRegularStar",
    "FontAwesomeSolidAngleDown",
    "FontAwesomeSolidAngleUp",
    "FontAwesomeSolidCode",
    "FontAwesomeSolidXmark",
    "FontAwesomeSolidStar",
    "HeroiconsSolidMinus",
    "HeroiconsSolidPlus",
    "OcticonsFileBinary24",
]

[dev-dependencies]
fake = "2.4"
wasm-bindgen-test = "0.3"
