[package]
name = "syre-desktop-lib"
version = "0.10.0"
description = "Shared types and functionality for the front- and back-end of Syre desktop."
authors = ["Brian Carlsen <carlsen.bri@gmail.com>"]

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = ["syre", "syre-data"]
categories = []
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine.workspace = true
csv.workspace = true
indexmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

syre-core = { path = "../../core", features = ["serde"] }
syre-local = { path = "../../local", default-features = false }
syre-local-database = { path = "../../local/database" }
