[package]
name = "syre-desktop-lib"
version = "0.11.0"
edition = "2021"

[dependencies]
derive_more.workspace = true
serde = { workspace = true, features = ["derive"] }
syre-core.workspace = true
syre-local.workspace = true
syre-local-database.workspace = true
syre-local-runner.workspace = true
trash = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v7"] }

[features]
server = ["dep:trash"]
