[package]
name = "syre-desktop-tauri"
version = "0.10.1"
description = "Syre desktop application."
authors = ["Brian Carlsen <carlsen.bri@gmail.com>"]

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = ["syre", "syre-data", "data", "data-analysis", "data-management"]
categories = ["gui", "science"]
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
calamine = { workspace = true }
csv = { workspace = true }
directories = { workspace = true }
open = "5.0"
regex = { workspace = true } # TODO: Only needed for parsing errors in commands/assets.
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri = { version = "1.5", features = ["dialog-open", "process-command-api", "shell-sidecar", "system-tray", "updater"] }
thiserror = { workspace = true }
tracing = {  workspace = true}
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["time", "json"] }
trash = { workspace = true }
uuid = { workspace = true , features = ["serde", "v4"] }
zmq = { workspace = true }

syre-core = { path = "../../core", features = ["serde"] }
syre-desktop-lib = { path = "../src-lib" }
syre-local = { path = "../../local" }
syre-local-database = { path = "../../local/database", features = ["server", "client"] }
syre-local-runner = { path = "../../local/runner" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
