[package]
name = "syre-desktop"
version = "0.11.0"
description = "Syre desktop application."
authors = ["Brian Carlsen <carlsen.bri@gmail.com>"]
edition = "2021"

homepage = "https://syre.ai"
repository = "https://github.com/syre-data/syre"
keywords = ["syre", "syre-data", "data", "data-analysis", "data-management"]
categories = ["gui", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syre-core = { workspace = true, features = ["serde"] }
syre-local = { workspace = true, features = ["fs"] }
syre-local-database = { workspace = true, features = ["client"] }
syre-desktop-lib = { path = "../src-lib" }
tauri-plugin-dialog = "2.0.0-rc"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "time"] }
tracing-appender.workspace = true
tauri-plugin-devtools = { git = "https://github.com/crabnebula-dev/devtools" }
zmq.workspace = true
derive_more.workspace = true
open = "5.3.0"
